# rust_image_processor

./: Cargo.toml
.github/workflows/: code_quality.yml
src/: handler.rs
src/models/: image.model.rs
